--- a/config/DankMaterialShell/settings.json
+++ b/config/DankMaterialShell/settings.json
@@ -415,6 +415,10 @@
       "HDMI-A-2": {
         "x": 21.40234375,
         "y": 66.43359375
+      },
+      "eDP-1": {
+        "x": 11.6640625,
+        "y": 56.2734375
       }
     },
     "systemMonitor": {
